Correct spacing between "articles" (vertical sections)

--- a/docs/resources/css/beta2.css
+++ b/docs/resources/css/beta2.css
@@ -258,6 +258,7 @@ nav > a {
 }
 
 article {
+  margin-top: 4rem;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
